@@ -595,7 +595,7 @@ LISPFUN(find_symbol,1,1,norest,nokey,0,NIL)
 LISPFUN(unintern,1,1,norest,nokey,0,NIL)
 LISPFUN(export,1,1,norest,nokey,0,NIL)
 LISPFUN(unexport,1,1,norest,nokey,0,NIL)
-LISPFUNN(reexport,2)
+LISPFUNN(re_export,2)
 LISPFUN(import,1,1,norest,nokey,0,NIL)
 LISPFUN(shadowing_import,1,1,norest,nokey,0,NIL)
 LISPFUN(shadow,1,1,norest,nokey,0,NIL)
