@@ -1,5 +1,9 @@
 2001-08-05  Bruno Haible  <haible@clisp.cons.org>
 
+	* constsym.d (S(re_export)): Renamed from S(reexport).
+
+2001-08-05  Bruno Haible  <haible@clisp.cons.org>
+
 	* charstrg.d (unpack_string): Rename local variable index to offset,
 	to be consistent with the documentation.
 	(unpack_string_ro): Add documentation.
